--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="pt-br">
 <head>
 	<title>Bheta</title>
-	<link rel="icon" href="images/calculadora.png">
+	<link rel="icon" href="calculadora.png">
 	<meta charset="utf-8">
 	<meta http-equiv="refresh" content="2000">
 	<meta name="author" content="Sites Profissionais">
 	<meta name="description" content="Site para amantes de matematica">
 	<meta name="keywords" content="Matematica, exercicio matematica, exercicios, automatico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/styleFooter.css">
-	<link rel="stylesheet" type="text/css" href="css/styleLado.css">
-	<link rel="stylesheet" type="text/css" href="css/styleModal.css">
-	<script type="text/javascript" src="js/codscript.js"></script>
-	<script type="text/javascript" src="js/pacoteTermometria.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styleFooter.css">
+	<link rel="stylesheet" type="text/css" href="styleLado.css">
+	<link rel="stylesheet" type="text/css" href="styleModal.css">
+	<script type="text/javascript" src="codscript.js"></script>
+	<script type="text/javascript" src="pacoteTermometria.js"></script>
 </head>
 <body>
 <header class="cabecalho">
@@ -36,17 +36,17 @@
 			<div class="geral">
 				<div class="contact-info">
 					<div class="option">
-						<img class="i" src="images/envelope-solid.svg">
+						<img class="i" src="envelope-solid.svg">
 						<div class="text">Bheta@gmail.com</div>	
 					</div>
 
 					<div class="option">
-						<img class="i" src="images/map-marker-alt-solid.svg">
+						<img class="i" src="map-marker-alt-solid.svg">
 						<div class="text">Global</div>	
 					</div>
 
 					<div class="option">
-						<img class="i" src="images/phone-volume-solid.svg">
+						<img class="i" src="phone-volume-solid.svg">
 						<div class="text">+985391957</div>	
 					</div>
 				</div>
@@ -64,7 +64,7 @@
 		<div class="caixa1" style="">
 			<h1 class="caixa1Text">Geometria Plana</h1>
 				<figure class="figureCaixa1" style="">
-					<img src="images/fotoProgram.jpg" width="100%" height="100%" class="imgCaixa" ">
+					<img src="fotoProgram.jpg" width="100%" height="100%" class="imgCaixa" ">
 					<figcaption>
 					<p class="descricao"><a href="#bg" class="abrirModal">Começar</a></p>
 					
@@ -80,12 +80,12 @@
 							<h1 class="h1-teorico">Área de figuras planas</h1>
 							<p>As áreas das figuras planas medem o tamanho da superfície da figura. Desse modo, podemos pensar que quanto maior a superfície da figura, maior será sua área.</p>
 							<figure class="imgfiguras">
-								<img src="images/triangulo.gif" width="90px" height="106px;" class="alinhara">
-								<img src="images/q.gif" width="90px" height="96px;" class="alinhara">
-								<img src="images/retangulo.gif" width="90px" height="96px;" class="alinhara">
-								<img src="images/trapezio.gif" width="90px" height="96px;" class="alinhara">
-								<img src="images/losango.gif" width="90px" height="96px;" class="alinhara">
-								<img src="images/circulo.gif" width="90px" height="96px;" class="alinhara">
+								<img src="triangulo.gif" width="90px" height="106px;" class="alinhara">
+								<img src="q.gif" width="90px" height="96px;" class="alinhara">
+								<img src="retangulo.gif" width="90px" height="96px;" class="alinhara">
+								<img src="trapezio.gif" width="90px" height="96px;" class="alinhara">
+								<img src="losango.gif" width="90px" height="96px;" class="alinhara">
+								<img src="circulo.gif" width="90px" height="96px;" class="alinhara">
 							</figure>
 							<p>
 								A Geometria plana é a área da matemática que estuda as figuras planas. Ou seja, aquelas que possuem comprimento e largura, sendo figuras bidimensionais(duas dimensões).
